# isolve

./: .gitignore  DESCRIPTION  NAMESPACE  README.md  configure  configure.ac
R/: RcppExports.R
man/: isolve-package.Rd
src/: RcppExports.cpp  config.h.in  configure.ac  rcpparma_hello_world.cpp
